@@ -1,3 +1,8 @@
+2012-01-12  Karl Berry  <karl@gnu.org>
+
+	* util/tests/automtest.sh: manual test from automake, via
+	Stefano Lattarini, texinfo-devel 10 Jan 2012 10:27:55.
+
 2012-01-10  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (External Macro Processors,
